changes to dynamodbtable updated

--- a/export-dynamodb-to-s3.yml
+++ b/export-dynamodb-to-s3.yml
@@ -5,7 +5,7 @@ Resources:
     Type: 'AWS::S3::Bucket'
     DeletionPolicy: Retain
 
-  MyDynamoDBTable:
+  MyDynamoDBTable2:
     Type: 'AWS::DynamoDB::Table'
     Properties:
       AttributeDefinitions:
